# segm

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: segmConfig.cmake
src/: CMakeLists.txt
src/datatypes/: forestingtransform.cpp  forestingtransform.h  graph.cpp  graph.h  heap.cpp  heap.h  image.cpp  image.h  matrix.cpp  matrix.h  optimumpathforest.cpp  optimumpathforest.h  vector.cpp  vector.h
src/imgproc/: filter.cpp  filter.h
src/math/: linearalgebra.cpp  linearalgebra.h  statistics.cpp  statistics.h
src/metriclearn/: largemargin.cpp  largemargin.h  neighborcompanalysis.cpp  neighborcompanalysis.h
src/segmentation/: closestdyntree.cpp  closestdyntree.h  dtisf.cpp  dtisf.h  dyntree.cpp  dyntree.h  isf.cpp  isf.h  watercut.cpp  watercut.h
src/utils/: algorithm.cpp  algorithm.h  color.cpp  color.h
test/: CMakeLists.txt  test.cpp  test.h
test/datatypes/: heaptest.cpp  heaptest.h
test/imgproc/: gaussiantest.cpp  gaussiantest.h
test/math/: pcatest.cpp  pcatest.h  svdtest.cpp  svdtest.h
test/metriclearn/: largemargintest.cpp  largemargintest.h  ncatest.cpp  ncatest.h
test/segmentation/: dyntreetest.cpp  dyntreetest.h  isftest.cpp  isftest.h  watercuttest.cpp  watercuttest.h
test/utils/: colortest.cpp  colortest.h
